JSON links modified

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </div>
     <div style="padding: 1em;">
         <p>Welcome to my site!</p>
-        <p>My info: <a href="my_info.json"></a></p>
-        <p>Sample: <a href="sample.json"></a></p>
+        <p>My info: <a href="my_info.json">Personal Info</a></p>
+        <p>Sample: <a href="sample.json">Sample file</a></p>
     </div>
 </body>
 </html>
