JSON links fixed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div style="padding: 1em;">
         <p>Welcome to my site!</p>
         <p>My info: <a href="my_info.json" target="_blank">Personal Info</a></p>
-        <p>Sample: <a href="sample.json" target="_blank"></a>Sample file</p>
+        <p>Sample: <a href="sample.json" target="_blank">Sample file</a></p>
     </div>
 </body>
 </html>
